--- a/TKstylesheet.css
+++ b/TKstylesheet.css
@@ -120,6 +120,7 @@
         text-align: right;
         font-size: 70%;
         padding-top: 1.7%;
+        padding-right: 0%;
         right: 0px;
     }
 
