--- a/TKstylesheet.css
+++ b/TKstylesheet.css
@@ -4,8 +4,30 @@
         background: transparent;
     }
 
+    hr { 
+        border : 0;
+        height: 1px; 
+        background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0)); 
+        background-color: #00FF00;
+    }
+
+    p {
+        width:50 0px; 
+        overflow: hidden; 
+        text-overflow: ellipsis;
+        white-space: nowrap;
+    }
+
     #main { 
         vertical-align: middle;
+    }
+
+    #TKlogomain {
+        height: 150px;
+        width: 150px;
+        display: block;
+        margin: 0 auto;
+        margin-top: 100px;
     }
 
     #title {
@@ -13,7 +35,7 @@
         color: #00FF00;
         height: 90%; 
         width: 100%;
-        padding-top: 12%;
+        margin-top: -35px;
         text-align: center;
 
     }
@@ -24,7 +46,8 @@
 
     #search {
         text-align: center;
-        padding-top: 1%;
+        height: 5%;
+        padding-top: 0%;
     }
 
     .searchButton{
@@ -33,7 +56,7 @@
         height: 40px;
     }
 
-    #searchtext{
+    .searchtext{
         color: #00FF00;
         width: 850px;
         height: 40px;
@@ -43,9 +66,35 @@
         padding-left: 5px;
     }
 
-    #searchtext:focus{
+    .searchtext:focus{
         outline: 0;
         border-color: #00FF00;
+    }
+
+    #searchtextresults{
+        position: fixed;
+        background-color: #404040;
+        top: 10px;
+        left: 150px;
+        border-color: #00FF00;
+    }
+
+    #searchBtnResults{
+        position: fixed;
+        top: 10px;
+        right: 400px;
+    }
+
+    #TKlogoresults {
+        position: fixed;
+        width: 65px;
+        height: 65px;
+        left: 40px;
+    }
+
+    #webResults {
+        padding-top: 5%;
+        padding-left: -3%;
     }
 
     #filters {
@@ -92,36 +141,32 @@
         width: 100%;
         bottom: 0px;
         padding-top: 3px;
+        padding-bottom: 3px;
         background-color: #404040;
     }
 
     .settingsHome{
         position: absolute;
-        height: auto;
         width: 40px;
         left: 0px;
+        padding-top: 3px;
         padding-left: 10px;
+        padding-bottom: 10px;
     }
 
-    .copyright{
-        position: absolute;
-        color: #00FF00;
-        text-align: right;
-        padding-top: 1.6%;
-        font-size: 70%;
-        right: 0px;
-        padding-right: 7.8%;
+    .settingsHomeResults{
+        position: fixed;
+        height: 40px;
+        width: 40px;
+        right: 5px;
+        top: 11px;
     }
 
-    .footerText{
-        position: absolute;
-        font-family: "Courier New", Courier, monospace;
-        color: #00FF00;
-        text-align: right;
-        font-size: 70%;
-        padding-top: 1.7%;
-        padding-right: 0%;
-        right: 0px;
+    #searchBar{
+        background-color: #404040;
+        width: 100%;
+        height: 60px;
+        position: fixed;
     }
 
 
